--- a/Frontend/Profile_ngo.html
+++ b/Frontend/Profile_ngo.html
@@ -294,14 +294,12 @@
                             <div class="location-field">
                                 <div class="form-row">
                                     <div class="col">
-                                        <input type="number" class="form-control" style="border-radius: 5px"
-                                            id="editlatitude" name="editlatitude" placeholder="Latitude" step="any"
-                                            required />
+                                        <input type="text" class="form-control" style="border-radius: 5px" id="editlatitude" name="editlatitude" placeholder="Latitude" 
+                                          pattern="^-?([1-8]?[0-9](\.\d+)?|90(\.0+)?)$"  title="Please enter a valid latitude between -90 and 90." required />
                                     </div>
                                     <div class="col">
-                                        <input type="number" class="form-control" style="border-radius: 5px"
-                                            id="editlongitude" name="editlongitude" placeholder="Longitude" step="any"
-                                            required />
+                                      <input type="text" class="form-control" style="border-radius: 5px" id="editlongitude" name="editlongitude" placeholder="Longitude"
+                                       pattern="^-?([1-9]?[0-9]|1[0-7][0-9]|180)(\.\d+)?$" title="Please enter a valid longitude between -180 and 180." required />
                                     </div>
                                 </div>
                             </div>
@@ -323,7 +321,7 @@
                         <div class="form-group">
                             <label for="editPrimaryContactPhone">Primary Contact Phone<span
                                     class="text-danger">*</span></label>
-                            <input type="text" class="form-control" id="editPrimaryContactPhone" required>
+                            <input type="tel" class="form-control" id="editPrimaryContactPhone" required>
                         </div>
                         <div class="form-group">
                             <label for="editSecondaryContactName">Secondary Contact Name</label>
@@ -335,7 +333,7 @@
                         </div>
                         <div class="form-group">
                             <label for="editSecondaryContactPhone">Secondary Contact Phone</label>
-                            <input type="text" class="form-control" id="editSecondaryContactPhone">
+                            <input type="tel" class="form-control" id="editSecondaryContactPhone">
                         </div>
                         <!-- <div class="form-group">
                             <label for="edit_recent_annual_report">Recent Annual Report<span class="text-danger">(Pdf only)</span></label>
@@ -505,9 +503,8 @@
                 alert('Check all the required fields.');
                 return;
             }
-
             if (!validateContacts()) return;
-
+            
             const updatedNGO = {
                 organization_name: document.getElementById('editOrganizationName').value,
                 website_url: document.getElementById('editWebsiteUrl').value,
@@ -562,42 +559,43 @@
             // for (const element of photosFiles) {
             //     formData.append('photos', element)
             // }
-
-            const BACKEND_URL = "http://localhost:3000";
-            try {
-                const token = localStorage.getItem('authToken');
-                if (!token) {
-                    alert('Authorization token is missing. Please log in again.');
-                    window.location.href = 'Login.html';
-                    return;
+            if (confirm('Are you sure ?')){
+                const BACKEND_URL = "http://localhost:3000";
+                try {
+                    const token = localStorage.getItem('authToken');
+                    if (!token) {
+                        alert('Authorization token is missing. Please log in again.');
+                        window.location.href = 'Login.html';
+                        return;
+                    }
+                    const response = await fetch(`${BACKEND_URL}/ngo/updatedetails`, {
+                        method: "PATCH",
+                        headers: {
+                            'Authorization': token,
+                        },
+                        body: formData
+                    });
+                    if (response.status === 401) {
+                        alert('Not authorised to access this route');
+                        localStorage.clear();
+                        window.location.assign('Login.html');
+                        return;
+                    }
+                    if (response.status !== 200) {
+                        const data = await response.json();
+                        alert(`Error: ${data.message}`);
+                        return;
+                    }
+                    else {
+                        alert('Profile updated successfully');
+                        $('#editProfileModal').modal('hide');
+                        fetchProfileData();
+                    }
                 }
-                const response = await fetch(`${BACKEND_URL}/ngo/updatedetails`, {
-                    method: "PATCH",
-                    headers: {
-                        'Authorization': token,
-                    },
-                    body: formData
-                });
-                if (response.status === 401) {
-                    alert('Not authorised to access this route');
-                    localStorage.clear();
-                    window.location.assign('Login.html');
-                    return;
+                catch (error) {
+                    console.error(error);
+                    alert('Error fetching data');
                 }
-                if (response.status !== 200) {
-                    const data = await response.json();
-                    alert(`Error: ${data.message}`);
-                    return;
-                }
-                else {
-                    alert('Profile updated successfully');
-                    $('#editProfileModal').modal('hide');
-                    fetchProfileData();
-                }
-            }
-            catch (error) {
-                console.error(error);
-                alert('Error fetching data');
             }
         }
 
