--- a/Frontend/Ind_register.html
+++ b/Frontend/Ind_register.html
@@ -182,14 +182,12 @@
                                 <div class="location-field">
                                     <div class="form-row">
                                         <div class="col">
-                                            <input type="number" class="form-control" style="border-radius: 5px;"
-                                                id="latitude" name="latitude" placeholder="Latitude" step="any"
-                                                required>
+                                            <input type="text" class="form-control" style="border-radius: 5px" id="latitude" name="latitude" placeholder="Latitude" 
+                                              pattern="^-?([1-8]?[0-9](\.\d+)?|90(\.0+)?)$"  title="Please enter a valid latitude between -90 and 90." required />
                                         </div>
                                         <div class="col">
-                                            <input type="number" class="form-control" style="border-radius: 5px;"
-                                                id="longitude" name="longitude" placeholder="Longitude" step="any"
-                                                required>
+                                          <input type="text" class="form-control" style="border-radius: 5px" id="longitude" name="longitude" placeholder="Longitude"
+                                           pattern="^-?([1-9]?[0-9]|1[0-7][0-9]|180)(\.\d+)?$" title="Please enter a valid longitude between -180 and 180." required />
                                         </div>
                                     </div>
                                 </div>
@@ -280,46 +278,47 @@
 
         document.getElementById('registerForm').addEventListener('submit', async function (event) {
             event.preventDefault();
+            if (confirm('Are you sure you want to submit ?')){
+                const newPassword = document.getElementById("password").value;
+                const confirmPassword = document.getElementById("re-password").value;
 
-            const newPassword = document.getElementById("password").value;
-            const confirmPassword = document.getElementById("re-password").value;
-
-            if (newPassword !== confirmPassword) {
-                alert('Passwords do not match');
-                return;
-            }
-            const form = event.target;
-            const formData = new FormData(form);
-            const homeAddress = {
-                address_line_1: formData.get('address_line_1'),
-                address_line_2: formData.get('address_line_2'),
-                city: formData.get('city'),
-                state: formData.get('state'),
-                zip_code: formData.get('zip_code'),
-                geo_location: {
-                    latitude: formData.get('latitude'),
-                    longitude: formData.get('longitude')
+                if (newPassword !== confirmPassword) {
+                    alert('Passwords do not match');
+                    return;
                 }
-            };
+                const form = event.target;
+                const formData = new FormData(form);
+                const homeAddress = {
+                    address_line_1: formData.get('address_line_1'),
+                    address_line_2: formData.get('address_line_2'),
+                    city: formData.get('city'),
+                    state: formData.get('state'),
+                    zip_code: formData.get('zip_code'),
+                    geo_location: {
+                        latitude: formData.get('latitude'),
+                        longitude: formData.get('longitude')
+                    }
+                };
 
-            formData.append('home_address', JSON.stringify(homeAddress));
+                formData.append('home_address', JSON.stringify(homeAddress));
 
-            try {
-                const response = await fetch('http://localhost:3000/volunteer/create', {
-                    method: 'POST',
-                    body: formData
-                });
-                if (response.status == 201) {
-                    alert("Registration successful, Please check your mailbox.");
-                    window.location.assign('index.html');
-                } else {
-                    const result = await response.json();
-                    console.error('Server responded with an error:', result);
-                    alert(result.message);
+                try {
+                    const response = await fetch('http://localhost:3000/volunteer/create', {
+                        method: 'POST',
+                        body: formData
+                    });
+                    if (response.status == 201) {
+                        alert("Registration successful, Please check your mailbox.");
+                        window.location.assign('index.html');
+                    } else {
+                        const result = await response.json();
+                        console.error('Server responded with an error:', result);
+                        alert(result.message);
+                    }
+                } catch (error) {
+                    console.error('Fetch error:', error);
+                    alert('An error occurred. Please try again later.');
                 }
-            } catch (error) {
-                console.error('Fetch error:', error);
-                alert('An error occurred. Please try again later.');
             }
         });
 
